# ros_ser_cli

pepper_robot_client/: CMakeLists.txt  package.xml
pepper_robot_client/launch/: pepper_server.launch
pepper_robot_client/src/: pepper_robot_client.py
pepper_robot_server/: CMakeLists.txt  package.xml
pepper_robot_server/launch/: pepper_server.launch
pepper_robot_server/src/: pepper_robot_server.py
