<?xml version="1.0"?>
<package format="2">
  <name>pepper_robot_client</name>
  <version>0.0.1</version>
  <description>The pepper_robot_client package</description>

  <maintainer email="kassid777@gmail.com">Said</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mmap</build_depend>
  <build_depend>struct</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mmap</exec_depend>
  <exec_depend>struct</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>