<?xml version="1.0"?>
<package format="2">
  <name>pepper_robot_server</name>
  <version>0.0.1</version>
  <description>The pepper_robot_server package</description>

  <maintainer email="kassid777@gmail.com">Said</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>python3-pybullet</build_depend>
  <build_depend>python3-opencv</build_depend>
  <build_depend>python3-stable-baselines3</build_depend>
  <build_depend>python3-torch</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>mmap</build_depend>
  <build_depend>struct</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-pybullet</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-stable-baselines3</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>mmap</exec_depend>
  <exec_depend>struct</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>